some fix locale